--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,10 @@
-body{
-    color: #333;
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
+body {
+  color: #333;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
 }
 
 #container {
